--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && workbox generateSW workbox-config.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -25,6 +25,6 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "vite": "^6.3.5",
-    "vite-plugin-pwa": "^1.0.0"
+    "workbox-cli": "^7.3.0"
   }
 }
