--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && workbox generateSW workbox-config.cjs",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -24,7 +24,6 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "vite": "^6.3.5",
-    "workbox-cli": "^7.3.0"
+    "vite": "^6.3.5"
   }
 }
