feat: Implement full notification system and fix PWA setup

--- a/.env
+++ b/.env
@@ -7,3 +7,12 @@ VITE_FIREBASE_STORAGE_BUCKET="characterchat-1501e.firebasestorage.app"
 VITE_FIREBASE_MESSAGING_SENDER_ID="269692914059"
 VITE_FIREBASE_APP_ID="1:269692914059:web:0aa3aabdd510a36db9c78e"
 
+
+
+VITE_NOTI_FIREBASE_API_KEY="AIzaSyCzvdcPmv3KAySs1SwbHC7AtesAw7HFbKM"
+VITE_NOTI_FIREBASE_AUTH_DOMAIN="characterchat-1501e.firebaseapp.com"
+VITE_NOTI_FIREBASE_PROJECT_ID="characterchat-1501e"
+VITE_NOTI_FIREBASE_STORAGE_BUCKET="characterchat-1501e.firebasestorage.app"
+VITE_NOTI_FIREBASE_MESSAGING_SENDER_ID="269692914059"
+VITE_NOTI_FIREBASE_APP_ID="1:269692914059:web:210dec6c8899ca22b9c78e"
+VITE_NOTI_FIREBASE_VAPID_KEY="BGf5hSt8mgPYj8HdJZ4vKQ0yAGVfRhhc8AaZfq5X9-H02T5Eat1WrbeaI8TvyI1AB8LmWCC54oEM-dxTFUdMKTI"
